// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthService - Login should log user in and generates new user token 1`] = `
Object {
  "syncSessions": Array [
    "valid-sync-session",
  ],
  "user": Object {
    "_id": "User|9f338224-b0d5-45aa-b02c-21c7e0c3c07a",
    "email": "valid-user@manuscriptsapp.com",
    "name": "Valid System User",
  },
}
`;

exports[`AuthService - Login should log user in and updates existing token 1`] = `
Object {
  "syncSessions": Array [
    "valid-sync-session",
  ],
  "user": Object {
    "_id": "User|9f338224-b0d5-45aa-b02c-21c7e0c3c07a",
    "email": "valid-user@manuscriptsapp.com",
    "name": "Valid System User",
  },
}
`;

exports[`AuthService - loginGoogle should log user in and return jwt token if user already exist 1`] = `
Object {
  "syncSessions": Array [
    "valid-sync-session",
  ],
  "user": Object {
    "_id": "User|9f338224-b0d5-45aa-b02c-21c7e0c3c07a",
    "email": "valid-user@manuscriptsapp.com",
    "name": "Example User",
  },
}
`;

exports[`AuthService - loginGoogle should log user in and return jwt token if user not exist 1`] = `
Object {
  "syncSessions": Array [
    "valid-sync-session",
  ],
  "user": Object {
    "_id": "User|9f338224-b0d5-45aa-b02c-21c7e0c3c07a",
    "email": "valid-user@manuscriptsapp.com",
    "name": "Example User",
  },
}
`;

exports[`AuthService - loginGoogle should log user in and return jwt token if user not exist 2`] = `
Object {
  "syncSessions": Array [
    "valid-sync-session",
  ],
  "user": Object {
    "_id": "User|9f338224-b0d5-45aa-b02c-21c7e0c3c07a",
    "email": "valid-user@manuscriptsapp.com",
    "name": "Example User",
  },
}
`;
